2019-02-23  Hironobu Yamashita  <h.y.acetaminophen@gmail.com>

	* tt_post.c (tt_lookup_post_table): Fix a bug that the loop
	exceeds post->numberOfGlyphs (= the size of post->glyphNamePtr).
	https://github.com/texjporg/tex-jp-build/issues/74

2019-02-11  Karl Berry  <karl@tug.org>

	* configure.ac,
	* dvipdfmx.c: copyright 2019.

2019-02-10  Hironobu Yamashita  <h.y.acetaminophen@gmail.com>

	* cidtype0.c, cidtype2.c: Fix typo.

2019-01-27  Shunsaku Hirata  <shunsaku.hirata74@gmail.com>

	* spc_pdfm.c: Suppress a warning in tounicode special.
	Dvipdfmx had been giving a wrong warning when an optional
	argument to tounicode special is not supplied.

2018-12-27  Clerk Ma  <maqiyuan130324@vip.qq.com>

	* pdfobj.c: Introduce a static variable pdf_output_file_stats
	for LIBDPX. It does not affect (x)dvipdfmx.

2018-12-21  Shunsaku Hirata  <shunsaku.hirata74@gmail.com>

	* dvi.[ch], dvipdfmx.c, pdfdoc.[ch], pdfencrypt.[ch],
	spc_pdfm.c: Add a new special pdf:trailerid for directly
	specifying trailer ID.
	* spc_tpic.c, tfm.c, tt_gsub.c: Avoid compiler warning.
	* configure.ac: Version 20181221.

2018-10-12  Shunsaku Hirata  <shunsaku.hirata74@gmail.com>

	* dvipdfmx.c: Fix a bug that landscape option is not handled
	properly.
	* configure.ac: Version 20181012.

2018-10-08  Shunsaku Hirata  <shunsaku.hirata74@gmail.com>

	* mpost.c: Fix a bug in inline PS code handling.
	* dpxfile.c, pdfencrypt.c, type0.c: Avoid compiler warnings.
	* pdfobj.c: Fix a bug in (unused) TIFF predictor code.
	* configure.ac: Version 20181008.

2018-10-07  Simon Cozens  <simon@simon-cozens.org>

	* pdfobj.c: Clear static variables to allow PDF funcfions to
	be used more than once.

2018-10-02  Shunsaku Hirata  <shunsaku.hirata74@gmail.com>

	* dvipdfmx.c: Fixed a bug in handling of command line option '-M'.
	* mpost.c:  Fixed a bug in MetaPost generated PS files.
	Font selection had not been properly done for gsave/grestore.
	* configure.ac: Version 20181002.
